# ultim8

./: .clang-format  CMakeLists.txt  README.md
doc/: ideas.md  quirky_roms.md
etc/: CMakeLists.txt  config.toml
examples/: badinstruction.c8s  garbage.c8s  helloworld.c8s  input.c8s  pattern.c8s  soundtest.c8s  supertest.c8s
include/asm/: compiler.hpp  error.hpp  lexer.hpp  opmeta.hpp  parser.hpp
include/common/: eswap.hpp  integral_cast.hpp
include/emu/: framebuffer.hpp  input.hpp  instruction.hpp  vm.hpp
include/frontend/: application.hpp  audio.hpp  color.hpp  color_toml.hpp  config.hpp  debugger.hpp  frequency.hpp  keymap.hpp  keys.def  renderer.hpp  romio.hpp
scripts/: check-license.sh  header.txt
src/: CMakeLists.txt  assemble.cpp
src/asm/: compiler.cpp  lexer.cpp  opmeta.cpp  parser.cpp
src/emu/: framebuffer.cpp  vm.cpp
src/frontend/: application.cpp  audio.cpp  config.cpp  debugger.cpp  keymap.cpp  main.cpp  renderer.cpp  romio.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  eswap.cpp  integral_cast.cpp
test/emu/: CMakeLists.txt  vm.cpp
